# jura_ble

./: .gitignore  README.md  REUSE.toml  pyproject.toml  test.py
.github/workflows/: lint.yml  test.yml
src/jura_ble/: __init__.py  classes.py  encoding.py  machine.py  mock.py
tests/: test_machine.py  test_products.py
