[project]
name = "jura-ble"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stefan Hackenberg", email = "mail@stefan-hackenberg.de"},
]
dependencies = ["bleak>=0.22.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
