# SPDX-FileCopyrightText: 2025 Stefan Hackenberg
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "jura_ble"
version = "1.1.1"
description = "Default template for PDM package"
authors = [{ name = "Stefan Hackenberg", email = "mail@stefan-hackenberg.de" }]
dependencies = ["bleak>=0.22.3", "requests>=2.32.3"]
requires-python = "<3.14,>=3.12"
readme = "README.md"
license = { text = "GPL-3.0-only" }

[dependency-groups]
dev = ["reuse>=5.0.2", "ruff>=0.8.6", "pytest>=8.3.4"]
